phase2_Dev/src/objects/Historical_Staff_Staging__c.object
<CustomObject>
    <fields>
        <fullName>Active__c</fullName>
        <label>Active</label>
        <length>2</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Date_Assigned__c</fullName>
        <label>Date Assigned</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Duplicate_Rule__c</fullName>
        <formula>Intake_Id__c + &apos;|&apos; + Program_Id__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Duplicate Rule</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Error_Text__c</fullName>
        <label>Error Text</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Intake_Id__c</fullName>
        <label>Intake Id</label>
        <length>25</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Licensor_Name__c</fullName>
        <label>Licensor Name</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Licensor_Number__c</fullName>
        <label>Licensor Number</label>
        <length>25</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Program_Id__c</fullName>
        <label>Program Id</label>
        <length>25</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Role__c</fullName>
        <label>Role</label>
        <length>25</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Staff_Processed__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Staff Processed</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Total_Number__c</fullName>
        <label>Total Number</label>
        <length>10</length>
        <type>Text</type>
    </fields>
    <label>Historical Staff Staging</label>
    <listViews>
        <fullName>All</fullName>
        <columns>NAME</columns>
        <columns>Date_Assigned__c</columns>
        <columns>Intake_Id__c</columns>
        <columns>Program_Id__c</columns>
        <columns>Role__c</columns>
        <columns>Staff_Processed__c</columns>
        <columns>Error_Text__c</columns>
        <columns>Active__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Program_Id__c</field>
            <operation>equals</operation>
            <value>4904001</value>
        </filters>
        <label>All</label>
    </listViews>
    <nameField>
        <displayFormat>HS-{0000000}</displayFormat>
        <label>Historical Staff Staging Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Historical Staff Staging</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>